--- a/web/produtos.html
+++ b/web/produtos.html
@@ -36,16 +36,97 @@
       </div>
     </section>
 
-    <section class="container">
+    <section class="container produto_item">
       <div class="grid-11">
         <img
           src="./img/produtos/bikcraft-passeio-1.jpg"
           alt="Bikcraft Passeio"
         />
+        <h2>Passeio</h2>
       </div>
-      <div class="grid-5">
+      <div class="grid-5 produto_icone">
         <img src="./img/produtos/passeio.svg" alt="Bikcraft Passeio" />
       </div>
+      <div class="grid-8">
+        <img
+          src="./img/produtos/bikcraft-passeio-2.jpg"
+          alt="Bikcraft Passeio"
+        />
+      </div>
+      <div class="grid-8 produto_info">
+        <p>
+          O verdadeiro segredo da felicidade está em ter um genuíno interesse
+          por todos os detalhes da vida cotidiana. Interesse por todos os
+          detalhes da vida cotidiana.
+        </p>
+        <ul>
+          <li>Conforto</li>
+          <li>Qualidade</li>
+          <li>Design</li>
+          <li>Versatilidade</li>
+        </ul>
+    </section>
+
+    <section class="container produto_item">
+      <div class="grid-11">
+        <img
+          src="./img/produtos/bikcraft-esporte-1.jpg"
+          alt="Bikcraft Esporte"
+        />
+        <h2>Esporte</h2>
+      </div>
+      <div class="grid-5 produto_icone">
+        <img src="./img/produtos/esporte.svg" alt="Bikcraft Esporte" />
+      </div>
+      <div class="grid-8">
+        <img
+          src="./img/produtos/bikcraft-esporte-2.jpg"
+          alt="Bikcraft Esporte"
+        />
+      </div>
+      <div class="grid-8 produto_info">
+        <p>
+          O verdadeiro segredo da felicidade está em ter um genuíno interesse
+          por todos os detalhes da vida cotidiana. Interesse por todos os
+          detalhes da vida cotidiana.
+        </p>
+        <ul>
+          <li>Conforto</li>
+          <li>Qualidade</li>
+          <li>Design</li>
+          <li>Versatilidade</li>
+        </ul>
+    </section>
+
+    <section class="container produto_item">
+      <div class="grid-11">
+        <img
+          src="./img/produtos/bikcraft-retro-1.jpg"
+          alt="Bikcraft Retrô"
+        />
+        <h2>Retrô</h2>
+      </div>
+      <div class="grid-5 produto_icone">
+        <img src="./img/produtos/retro.svg" alt="Bikcraft Retrô" />
+      </div>
+      <div class="grid-8">
+        <img
+          src="./img/produtos/bikcraft-retro-2.jpg"
+          alt="Bikcraft Retrô"
+        />
+      </div>
+      <div class="grid-8 produto_info">
+        <p>
+          O verdadeiro segredo da felicidade está em ter um genuíno interesse
+          por todos os detalhes da vida cotidiana. Interesse por todos os
+          detalhes da vida cotidiana.
+        </p>
+        <ul>
+          <li>Conforto</li>
+          <li>Qualidade</li>
+          <li>Design</li>
+          <li>Versatilidade</li>
+        </ul>
     </section>
 
     <section class="quebra">
