--- a/web/sobre.html
+++ b/web/sobre.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/sobre.css" />
+
+    <link rel="icon" href="./img/favicon.ico">
   </head>
   <body>
     <header class="header">
