--- a/web/produtos.html
+++ b/web/produtos.html
@@ -22,7 +22,7 @@
           <ul>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="produtos.html" class="menu_ativo">Produtos</a></li>
-            <li><a href="portifolio.html">Portifólio</a></li>
+            <li><a href="portfolio.html">Portifólio</a></li>
             <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
@@ -150,7 +150,7 @@
         <div class="orcamento_dados grid-8">
           <h3>Dados</h3>
             <span>+55 21 99999-9999</span>
-            <span class="dados_email">orcamento@bikcraft.com</span>
+            <span>orcamento@bikcraft.com</span>
           <h3>Monte a sua Bikcraft</h3>
           <p>Escolha as especificações</p>
           <ul>
