--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/responsivo.css" />
 
     <link rel="icon" href="./img/favicon.ico">
   </head>
