--- a/web/produtos.html
+++ b/web/produtos.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/produtos.css" />
+    <link rel="stylesheet" href="./css/responsivo.css" />
 
     <link rel="icon" href="./img/favicon.ico">
   </head>
