Estilização do Site - Animações
Foram acrescentados estilos de animação ao site.

--- a/web/portfolio.html
+++ b/web/portfolio.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="./css/responsivo.css" />
 
     <link rel="icon" href="./img/favicon.ico" />
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <header class="header">
@@ -32,32 +36,58 @@
 
     <section class="introducao-interna interna-portfolio">
       <div class="container">
-        <h1>Portifólio</h1>
-        <p>
+        <h1 data-anime="400" class="fadeInDown">Portifólio</h1>
+        <p data-anime="800" class="fadeInDown">
           Conheça os projetos que amamos mostrar
         </p>
       </div>
     </section>
 
-    <section class="container">
+    <section class="container fadeInDown" data-slide="quote" data-anime="1200">
       <blockquote class="quote_clientes">
         <p>
-          "No mundo atual, a continua expansão de nossa atividade cumpre um
-          papel essencial na formulação da gestão inovadora da qual fazemos
-          parte."
+          "Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez
+          foi intensificar o meu amor por esta atividade. Recomendo a todos que
+          amo".
         </p>
         <cite>Bárbara Moss</cite>
+      </blockquote>
+      <blockquote class="quote_clientes">
+        <p>
+          "Nada melhor do que dar um rolê com a minha Bikcraft na orla. Essa é a
+          minha companheira mais fiel, nunca me traiu e está sempre a minha
+          disposição."
+        </p>
+        <cite>Jhony Rato</cite>
+      </blockquote>
+      <blockquote class="quote_clientes">
+        <p>
+          "Aqueles que ainda não possuem uma Bikcraft, não sabem o que estão
+          perdendo. A precisão é absurda e a velocidade transcedental."
+        </p>
+        <cite>Bernardo</cite>
       </blockquote>
     </section>
 
     <section class="portfolio">
-      <div class="container">
+      <div class="container" data-slide="portfolio">
         <ul class="portfolio_lista">
           <li class="grid-8">
             <img src="./img/portfolio/retro.jpg" alt="Bicicleta Retrô" />
           </li>
           <li class="grid-8">
             <img src="./img/portfolio/passeio.jpg" alt="Bicicleta Passeio" />
+          </li>
+          <li class="grid-16">
+            <img src="./img/portfolio/esporte.jpg" alt="Bicicleta Esporte" />
+          </li>
+        </ul>
+        <ul class="portfolio_lista">
+          <li class="grid-8">
+            <img src="./img/portfolio/passeio.jpg" alt="Bicicleta Passeio" />
+            <li class="grid-8">
+              <img src="./img/portfolio/retro.jpg" alt="Bicicleta Retrô" />
+            </li>
           </li>
           <li class="grid-16">
             <img src="./img/portfolio/esporte.jpg" alt="Bicicleta Esporte" />
@@ -126,5 +156,9 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/simple-slide.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
