--- a/web/contato.html
+++ b/web/contato.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="./css/responsivo.css" />
 
     <link rel="icon" href="./img/favicon.ico" />
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <header class="header">
@@ -32,14 +36,14 @@
 
     <section class="introducao-interna interna-contato">
       <div class="container">
-        <h1>Contato</h1>
-        <p>
+        <h1 data-anime="400" class="fadeInDown">Contato</h1>
+        <p data-anime="800" class="fadeInDown">
           Tire suas dúvidas conosco
         </p>
       </div>
     </section>
 
-    <section class="contato container">
+    <section class="contato container fadeInDown" data-anime="1200">
       <form id="form_contato" class="contato_form grid-8">
         <label for="nome">Nome</label>
         <input type="text" name="nome" id="nome" />
@@ -147,5 +151,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
