--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="./css/responsivo.css" />
 
     <link rel="icon" href="./img/favicon.ico">
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <header class="header">
@@ -31,19 +35,19 @@
 
     <section class="introducao">
       <div class="container">
-        <h1>Bicicletas feitas a Mão</h1>
-        <blockquote class="quote-externo">
+        <h1 data-anime="400" class="fadeInDown">Bicicletas feitas a Mão</h1>
+        <blockquote class="fadeInDown quote-externo" data-anime="800">
           <p>
             "Não tenha nada em sua casa que você não considere útil ou acredita
             ser bonito."
           </p>
           <cite>WILLIAM MORRIS</cite>
         </blockquote>
-        <a href="produtos.html" class="btn">Orçamento</a>
+        <a href="produtos.html" class="btn" data-anime="1200">Orçamento</a>
       </div>
     </section>
 
-    <section class="produtos container">
+    <section class="produtos container fadeInDown" data-anime="1600">
       <h2 class="subtitulo">Produtos</h2>
       <ul class="produtos_lista">
         <li class="grid-1-3">
@@ -176,6 +180,9 @@
       </div>
 
     </footer>
+
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
 
   </body>
 </html>
