--- a/web/produtos.html
+++ b/web/produtos.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="./css/responsivo.css" />
 
     <link rel="icon" href="./img/favicon.ico">
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <header class="header">
@@ -32,14 +36,14 @@
 
     <section class="introducao-interna interna-produtos">
       <div class="container">
-        <h1>Produtos</h1>
-        <p>
+        <h1 data-anime="400" class="fadeInDown">Produtos</h1>
+        <p data-anime="800" class="fadeInDown">
           Conheça todos os nossos produtos
         </p>
       </div>
     </section>
 
-    <section class="container produto_item">
+    <section class="container produto_item fadeInDown" data-anime="1200">
       <div class="grid-11">
         <img
           src="./img/produtos/bikcraft-passeio-1.jpg"
@@ -226,5 +230,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
