--- a/web/sobre.html
+++ b/web/sobre.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="./css/responsivo.css" />
 
     <link rel="icon" href="./img/favicon.ico">
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <header class="header">
@@ -32,14 +36,14 @@
 
     <section class="introducao-interna interna-sobre">
       <div class="container">
-        <h1>Sobre</h1>
-        <p>
+        <h1 data-anime="400" class="fadeInDown">Sobre</h1>
+        <p data-anime="800" class="fadeInDown">
           Conheça mais sobre a Bikcraft
         </p>
       </div>
     </section>
 
-    <section class="missao_sobre container">
+    <section class="missao_sobre container fadeInDown" data-anime="1200">
       <div class="grid-10">
         <h2 class="subtitulo_interno">História, Missão e Visão</h2>
         <p>
@@ -155,5 +159,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
