--- a/web/contato.html
+++ b/web/contato.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bikcraft - Contato</title>
+    <title>Bikcraft - Contato - 21 99999-9999</title>
+
+    <meta
+      name="description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bikcraft - - Contato - 21 99999-9999" />
+    <meta
+      property="og:description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
+    <meta property="og:url" content="http://bikcraft.com/contato.html" />
+    <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/grid.css" />
@@ -11,7 +26,7 @@
     <link rel="stylesheet" href="./css/contato.css" />
     <link rel="stylesheet" href="./css/responsivo.css" />
 
-    <link rel="icon" href="./img/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
 
     <script>
       document.documentElement.classList.add("js");
@@ -71,7 +86,7 @@
 
         <label for="mensagem">Mensagem</label>
         <textarea id="mensagem" name="mensagem" required></textarea>
-        <button id="enviar" name="enviar" type="submit" class="btn btn-preto">
+        <button id="enviar" name="enviar" type="submit" class="btn btn_preto">
           Enviar
         </button>
       </form>
