--- a/web/produtos.html
+++ b/web/produtos.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bikcraft - Produtos</title>
+    <title>Bikcraft - Conheça as linhas Passeio, Esporte e Retrô</title>
+
+    <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô.">
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Bikcraft - Conheça as linhas Passeio, Esporte e Retrô"/>
+    <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."/>
+    <meta property="og:url" content="http://bikcraft.com/produtos.html"/>
+    <meta property="og:image" content="http://bikcraft.com/img/og-image.png"/> 
+
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/grid.css" />
@@ -11,7 +20,7 @@
     <link rel="stylesheet" href="./css/produtos.css" />
     <link rel="stylesheet" href="./css/responsivo.css" />
 
-    <link rel="icon" href="./img/favicon.ico">
+    <link rel="icon" href="./favicon.ico">
 
     <script>
       document.documentElement.classList.add("js");
@@ -62,9 +71,7 @@
       </div>
       <div class="grid-8 produto_info">
         <p>
-          O verdadeiro segredo da felicidade está em ter um genuíno interesse
-          por todos os detalhes da vida cotidiana. Interesse por todos os
-          detalhes da vida cotidiana.
+          Muito melhor do que passear pela orla a vidros fechados. A Bikcraft Passeio é uma bibicleta que une conforto e praticidade para o seu dia a dia. Você nunca mais vai querer saber de outra.
         </p>
         <ul>
           <li>Conforto</li>
@@ -93,9 +100,7 @@
       </div>
       <div class="grid-8 produto_info">
         <p>
-          O verdadeiro segredo da felicidade está em ter um genuíno interesse
-          por todos os detalhes da vida cotidiana. Interesse por todos os
-          detalhes da vida cotidiana.
+      Mais rápida do que Forrest Gump, ninguém vai pegar você. A Bikcraft Esporte é uma bicicleta desenhada para a máxima performance. O seu desenpenho supera qualquer uma da categoria.
         </p>
         <ul>
           <li>Conforto</li>
@@ -123,11 +128,7 @@
         />
       </div>
       <div class="grid-8 produto_info">
-        <p>
-          O verdadeiro segredo da felicidade está em ter um genuíno interesse
-          por todos os detalhes da vida cotidiana. Interesse por todos os
-          detalhes da vida cotidiana.
-        </p>
+        <p>O passado volta para lembrarmos o que devemos fazer no futuro. A Bikcraft Retrô é uma bicicleta estiloza, feita para você que gosta do clássico, mas que não abre mão do conforto.</p>
         <ul>
           <li>Conforto</li>
           <li>Qualidade</li>
