--- a/web/index.html
+++ b/web/index.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bikcraft</title>
+    <title>Bikcraft - Bicicletas Personalizadas</title>
+    <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô.">
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Bikcraft - Bicicletas Personalizadas"/>
+    <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."/>
+    <meta property="og:url" content="http://bikcraft.com"/>
+    <meta property="og:image" content="http://bikcraft.com/img/og-image.png"/>      
+
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/responsivo.css" />
 
-    <link rel="icon" href="./img/favicon.ico">
+    <link rel="icon" href="./favicon.ico">
 
     <script>
       document.documentElement.classList.add("js");
@@ -37,10 +45,7 @@
       <div class="container">
         <h1 data-anime="400" class="fadeInDown">Bicicletas feitas a Mão</h1>
         <blockquote class="fadeInDown quote-externo" data-anime="800">
-          <p>
-            "Não tenha nada em sua casa que você não considere útil ou acredita
-            ser bonito."
-          </p>
+            <p>“Não tenha nada em sua casa que você não considere útil ou acredita ser bonito.”</p>
           <cite>WILLIAM MORRIS</cite>
         </blockquote>
         <a href="produtos.html" class="btn" data-anime="1200">Orçamento</a>
@@ -56,8 +61,7 @@
           </div>
           <h3>Passeio</h3>
           <p>
-            Ainda assim, existem dúvidas a respeito de como a necessidade de
-            renovação
+            Muito melhor do que passear pela orla a vidros fechados.
           </p>
 
           <li class="grid-1-3">
@@ -66,8 +70,7 @@
             </div>
             <h3>Esporte</h3>
             <p>
-              Ainda assim, existem dúvidas a respeito de como a necessidade de
-              renovação
+              Mais rápida do que Forrest Gump, ninguém vai pegar você.
             </p>
            </li>
 
@@ -77,8 +80,7 @@
             </div>
             <h3>Retrô</h3>
             <p>
-              Ainda assim, existem dúvidas a respeito de como a necessidade de
-              renovação
+              O passado volta para lembrarmos o que devemos fazer no futuro.
             </p>
            </li>
         </li>
@@ -113,15 +115,15 @@
         <ul class="qualidade_lista">
           <li class="grid-1-3">
             <h3>Durabilidade</h3>
-            <p>Ainda assim, existem dúvidas a respeito de como a necesidade de renovação renovação renovação</p>
+            <p>Sólida como pedra, leve como o vento e resistente como o diamante, são nossos diferenciais.</p>
           </li>
           <li class="grid-1-3">
             <h3>Design</h3>
-            <p>Ainda assim, existem dúvidas a respeito de como a necesidade de renovação renovação renovação</p>
+            <p>Feitas sob medida para o melhor conforto e eficiência. Adaptamos a sua Bikcraft para o seu corpo.</p>
           </li>
           <li class="grid-1-3">
             <h3>Sustentabilidade</h3>
-            <p>Ainda assim, existem dúvidas a respeito de como a necesidade de renovação renovação renovação</p>
+            <p>Além de ajudar a cuidar do meio ambiente, tirando carros da rua, toda a produção é sustentável.</p>
           </li>
         </ul>
 
