--- a/web/portfolio.html
+++ b/web/portfolio.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bikcraft - Portifólio</title>
+    <title>Bikcraft - Conheça o portfólio de clientes</title>
+
+    <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô.">
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Bikcraft - Conheça o portifólio de clientes"/>
+    <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."/>
+    <meta property="og:url" content="http://bikcraft.com/portfolio.html"/>
+    <meta property="og:image" content="http://bikcraft.com/img/og-image.png"/> 
+
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/grid.css" />
@@ -11,7 +20,7 @@
     <link rel="stylesheet" href="./css/portfolio.css" />
     <link rel="stylesheet" href="./css/responsivo.css" />
 
-    <link rel="icon" href="./img/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
 
     <script>
       document.documentElement.classList.add("js");
