--- a/web/contato.html
+++ b/web/contato.html
@@ -36,7 +36,7 @@
           <ul>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="portfolio.html">Portifólio</a></li>
+            <li><a href="portfolio.html">Portfólio</a></li>
             <li><a href="contato.html" class="menu_ativo">Contato</a></li>
           </ul>
         </nav>
